--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@ html,body {
 		  font-size:30px;
 		  color:#FF5151
 	  }
+	  #hehe{
+	  }
+	  @media only screen and (max-device-width: 400px) {
+		  #core_card{
+			  width: 100%;
+			  height: 100%;
+			  margin-top:0px;
+		  }
+		  #paper_button{
+			  font-size:200%;
+			}
+		  #maintext{
+			  font-size:200%;
+		  }
+	  }
 		</style>
 
 		<core-card id="core_card" layout vertical>
@@ -92,6 +107,7 @@ var get = function(){
 		return data[i].name;
 	return get();
 };
+
 Polymer({
 	nameEat: "吃! 吃! 吃!",
 	randomEat: function(){
