--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>今天中午吃啥?</title>
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<script src="components/platform/platform.js"></script>
 		<link rel="import" href="components/polymer/polymer.html">
 		<link rel="import" href="components/font-roboto/roboto.html">
